# uae-vat-ct-bridge

./: .gitignore  CHANGELOG.md  LICENSE  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
data/demo_dataset/: ct_computation_demo.json  expected_findings_demo.json  pl_summary_demo.csv  reconciling_items_demo.csv  vat_returns_demo.csv
data/templates/: pl_summary_template.csv  reconciling_items_template.csv  vat_returns_template.csv
docs/: release-checklist.md
docs/screenshots/: README.md
engine/: __init__.py  bridge.py  checks.py  constants.py  demo_run.py  ingest.py  models.py  report_excel.py  report_pdf.py  score.py
pages/: 1_Privacy.py  2_Terms.py  3_Known_Limitations.py
tests/: conftest.py  test_bridge.py  test_checks.py  test_demo_golden.py  test_demo_run.py  test_ingest.py  test_reports.py  test_score.py
tests/golden/: uae_demo_expected.json
