[project]
name = "uae-vat-ct-bridge"
version = "0.1.0"
description = "UAE VAT-to-CT arithmetic pre-filing self-check Streamlit MVP"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "altair>=5.0",
    "openpyxl>=3.1",
    "pandas>=2.0",
    "pydantic>=2.0",
    "python-dateutil>=2.8",
    "reportlab>=4.0",
    "streamlit>=1.35",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -p no:cacheprovider"

[tool.coverage.run]
source = ["engine"]
data_file = "${TEMP}/uae-vat-ct-bridge.coverage"

[tool.coverage.report]
fail_under = 80

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
